Added enable-native-access to jabkit